<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMSActivity">

  <LinearLayout

      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/places_autocomplete_search_hint"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingHorizontal="10dp"
      android:paddingTop="30dp"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/smsFragmentContainerView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/smsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_phone_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/smsTo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/to"
          android:textColor="@color/black"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/editTextPhoneNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:ems="15"
          android:inputType="number"
          android:textSize="20sp"
          tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>



    <TextView
        android:id="@+id/buttonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/click_button_to_sms_current_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <Button
        android:id="@+id/sendSMSButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="onButtonClick"
        android:text="@string/send_sms"
        android:textAlignment="center"
        tools:ignore="TextContrastCheck" />

  </LinearLayout>

  <androidx.fragment.app.FragmentContainerView
      android:id="@+id/smsFragmentContainerView"
      android:name="jwang.example.project2.ControlFragment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />



  </androidx.constraintlayout.widget.ConstraintLayout>